<resources>
    <string name="app_name">Github User App</string>
    <string name="search">Cari</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="setting_menu">Settings</string>
    <string name="favorite_menu">Favorite</string>
    <string name="content_description_icon">Content Description Icon</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="follow">Follow</string>
    <string name="share">Share</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="language">Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>