<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailUserActivity"
    android:paddingHorizontal="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@id/photo_user_imageview"
        android:layout_width="79dp"
        android:layout_height="79dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/photo_user_imageview"
        app:layout_constraintStart_toStartOf="@id/photo_user_imageview"
        app:layout_constraintTop_toBottomOf="@id/photo_user_imageview"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@id/followers_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/following_textview"
        app:layout_constraintEnd_toStartOf="@+id/following_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="100" />

    <TextView
        android:id="@id/following_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/repository_textview"
        app:layout_constraintEnd_toStartOf="@+id/repository_textview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/followers_textview"
        tools:text="100" />

    <TextView
        android:id="@id/repository_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/following_textview"
        app:layout_constraintTop_toBottomOf="@+id/name_textview"
        tools:text="100" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/followers_textview"
        app:layout_constraintStart_toStartOf="@+id/followers_textview"
        app:layout_constraintTop_toBottomOf="@+id/followers_textview"
        android:text="@string/followers" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/following_textview"
        app:layout_constraintStart_toStartOf="@+id/following_textview"
        app:layout_constraintTop_toBottomOf="@+id/following_textview"
        android:text="@string/following" />

    <TextView
        android:id="@+id/repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/repository_textview"
        app:layout_constraintStart_toStartOf="@+id/repository_textview"
        app:layout_constraintTop_toBottomOf="@+id/repository_textview"
        android:text="@string/repository" />

    <TextView
        android:id="@id/company_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/following"
        tools:text="@string/company" />

    <TextView
        android:id="@id/location_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_textview"
        tools:text="@string/location" />

    <com.google.android.material.tabs.TabLayout
        android:id="@id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:tabIconTint="@color/cardview_dark_background"
        app:tabIndicatorColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_textview" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>